@@ -1,6 +1,7 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+	- Should now work under MS-DOS
 
 0.4  2021-10-12
 	- Faster engine start-up because macros are expanded for release
